--- a/src/components/public/login/login.css
+++ b/src/components/public/login/login.css
@@ -1,110 +1,132 @@
 .container-fluid {
-    background-color: rgba(201,226,214,.85);
-    height: 100vh;
+  background-color: rgba(201, 226, 214, 0.85);
+  height: 100vh;
 }
 
 .mobilelogo {
-    margin: 0 20% 0 30%;
-    width: 40%;
+  margin: 0 20% 0 30%;
+  width: 40%;
 }
 
 img {
-    border: 0;
-    vertical-align: middle;
+  border: 0;
+  vertical-align: middle;
 }
 
 .tagline {
-    font-family: 'Merienda One',cursive!important;
-    font-size: 34px;
-    letter-spacing: .5px;
-    margin: 12% 20% 0;
-    text-align: center;
-    padding-bottom: 32px;
-    color: #717172;
+  font-family: "Merienda One", cursive !important;
+  font-size: 34px;
+  letter-spacing: 0.5px;
+  margin: 12% 20% 0;
+  text-align: center;
+  padding-bottom: 32px;
+  color: #717172;
 }
 
 .leftside {
-    background: #fff;
-    height: 100vh;
+  background: #fff;
+  height: 100vh;
 }
 
 .activationLabel {
-    margin-top: 20%;
-    width: 100%;
-    color: green;
+  margin-top: 20%;
+  width: 100%;
+  color: green;
 }
 
 .main-logo {
-    width: 50%;
-    padding: 10px;
-    margin-bottom: 10px;
-    margin-left: 25%;
+  width: 50%;
+  padding: 10px;
+  margin-bottom: 10px;
+  margin-left: 25%;
 }
 
 .panel-login {
-    border: none;
+  border: none;
 }
 
 .panel {
-    border-radius: 5px;
-    box-shadow: none;
-    margin-bottom: 20px;
-    background-color: #fff;
+  border-radius: 5px;
+  box-shadow: none;
+  margin-bottom: 20px;
+  background-color: #fff;
 }
 
 .panel-body {
-    padding: 15px;
+  padding: 15px;
 }
 
 .panel-login .form-group {
-    padding: 0;
+  padding: 0;
 }
 
 .form-group {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .custom-input {
-    padding: 15px;
-    border: none;
-    background: #eee;
-    width: 100%;
-    border-radius: 5px;
+  padding: 15px;
+  border: none;
+  background: #eee;
+  width: 100%;
+  border-radius: 5px;
 }
 
-.inner-addon  .eyeicon  {
-    position: absolute;
-    padding-top: 15px;
-    padding-bottom: 10px;
+.inner-addon .eyeicon {
+  position: absolute;
+  padding-top: 15px;
+  padding-bottom: 10px;
 }
-
 
 .right-addon .eyeicon {
-    right: 5px;
+  right: 5px;
 }
 
 .inner-addon {
-    position: relative;
+  position: relative;
 }
 
 .mat-icon {
-    background-repeat: no-repeat;
-    display: inline-block;
-    fill: currentColor;
-    height: 24px;
-    width: 24px;
+  background-repeat: no-repeat;
+  display: inline-block;
+  fill: currentColor;
+  height: 24px;
+  width: 24px;
 }
 
 .btn-login {
-    background-color: #108670 !important;
-    outline: 0;
-    color: #fff;
-    font-size: 14px;
-    height: auto;
-    font-weight: 400;
-    padding: 14px 0;
-    border: none;
-    border-radius: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
+  background-color: #108670 !important;
+  outline: 0 !important;
+  color: #fff !important;
+  font-size: 14px !important;
+  height: auto !important;
+  font-weight: 400 !important;
+  padding: 14px 0 !important;
+  border: none !important;
+  border-radius: 0 !important;
+  box-shadow: none !important;
+}
+
+.signupLink {
+  color: grey !important;
+}
+
+.alignRight {
+  text-align: right;
+}
+
+.pull-right {
+  float: right !important;
+}
+
+.alignLeft {
+  text-align: left;
+}
+
+.pull-left {
+  float: left !important;
+}
+
+.extraPadding {
+  padding: 15px;
 }
